hphp/test/zend/good/ext-posix/posix_mkfifo_wrongparams.php
<?php
posix_mkfifo(null);
var_dump(posix_mkfifo(null, 0644));
?>
===DONE===