hphp/test/zend/bad/Zend/tests/halt_compiler4.php
<?php
define ('__COMPILER_HALT_OFFSET__', 1);
__HALT_COMPILER();
?>
==DONE==